test/negative/internal_boundary_alias_import/Main.hx
import haxe.BoundaryTypes.JsonValue;

class Main {
	static function main():Void {
		var value:JsonValue = null;
		trace(value);
	}
}
